# conductor

./: README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/: main.py
backend/src/slices/: README.md  registry.py
backend/src/slices/demo_orchestrator/: README.md  __init__.py  router.py  schema.json
backend/src/slices/demo_status/: README.md  __init__.py  router.py  schema.json
backend/src/slices/example/: README.md  api.py  schema.json
backend/src/slices/workflow_orchestrator/: README.md  __init__.py  router.py  schema.json  workflow_definition.schema.json
backend/src/slices/workflow_orchestrator/workflows/: demo_linear.yaml
docs/: ARCHITECTURE_RULES.md  BACKEND_FASTAPI_DEFINITIONS.md  FRONTEND_NEXTJS_DEFINITIONS.md  RUN_GUIDE.md
docs/SLICE_TEMPLATE/: README.md  index.py  slice.schema.json
docs/SLICE_TEMPLATE/internal/: .gitkeep
docs/architecture/: backend-slice-guidelines.md  frontend-slice-guidelines.md  slice-definition.schema.json  vertical-slice-rules.md
docs/slices/: README.md  workflow_orchestrator.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/slices/: README.md
frontend/src/slices/demo_orchestrator/: DemoOrchestratorPage.tsx  README.md  index.ts  schema.json
frontend/src/slices/demo_status/: README.md  index.ts  page.tsx  schema.json
frontend/src/slices/example/: ExampleEntry.tsx  README.md  schema.json
frontend/src/slices/workflow_orchestrator/: index.ts  (+3 more)
(+9 files in other folders)
