[project]
name = "backend"
version = "0.1.0"
description = "Conductor FastAPI backend skeleton"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.1",
    "uvicorn[standard]==0.30.3"
]

[project.optional-dependencies]
dev = ["pytest==8.2.2"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
